2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* e-msg-composer.h: (e_msg_composer_guess_mime_type):
	* e-msg-composer.c: (e_msg_composer_guess_mime_type), (handle_uri),
	(e_msg_composer_add_inline_image_from_file):
	Use shared e_util_guess_mime_type instead of its own.

2008-04-14  Matthew Barnes  <mbarnes@redhat.com>

	* e-composer-autosave.c (e_composer_autosave_unregister):
	Remove some unused variables.

2008-04-11  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #517134

	* e-composer-actions.c: (action_attach_cb): Save some CPU cycles. 
	* e-composer-private.c: (composer_setup_charset_menu),
	(composer_setup_recent_menu), (e_composer_private_init): Extend the
	'Insert' menu to show a "Recent Documents" submenu (to quickly add
	them as attachments). 
	* evolution-composer.ui: Added a placeholder to dock the "Recent
	Documents" menu. 

2008-04-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #523413

	* e-msg-composer.c (msg_composer_dispose):
	Use the 'application_exiting' private flag to determine whether
	to tell e_composer_autosave_unregister() to delete the autosave
	file.

	* e-msg-composer.c (msg_composer_class_init),
	(e_msg_composer_save_draft):
	Remove the 'quit' parameter from the 'save-draft' signal.

	* e-msg-composer.c (e_msg_composer_request_close_all):
	Take an autosave snapshot before activating the CLOSE action,
	and set the private 'application_exiting' flag.  This should
	avoid prompting the user before shutting down.

	* e-composer-actions.c (action_close_cb):
	When electing to save a message before closing, hide the window
	immediately.  The callback function can then check the window's
	visibility after the save is complete to know whether to destroy
	the window.

	* e-composer-autosave.c (e_composer_autosave_unregister):
	Add a 'delete_file' boolean parameter to determine whether to
	delete the autosave file.

	* e-composer-private.h:
	Add an 'application_exiting' flag.
