@@ -1,3 +1,8 @@
+2008-04-22  Matthew Barnes  <mbarnes@redhat.com>
+
+	* Makefile.am:
+	Add gconf-bridge.[ch] from composer.
+
 2008-04-18  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes bug #528817
