@@ -1,3 +1,8 @@
+2008-04-22  Matthew Barnes  <mbarnes@redhat.com>
+
+	* em-composer-prefs.c:
+	gconf-bridge.h moved to e-util.
+
 2008-04-21  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #323402
